--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style id="react-native-stylesheet"></style>
     <meta charset="UTF-8" />
     <title>React Native examples</title>
-    <meta name="viewport" content="initial-scale=1.0,width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       html,
       body {
