--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>ACT Home Health Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="./src/assets/images/Logo/Logo1.png" />
+  <!-- <link rel="stylesheet" href="node_modules/react-table/react-table.css"> -->
+  <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
   <style>
     html,
     body {
