--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="shortcut icon" type="image/png" href="./src/assets/images/Logo/Logo1.png" />
   <!-- <link rel="stylesheet" href="node_modules/react-table/react-table.css"> -->
   <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="./src/assets/styles/style.css" rel="stylesheet">
   <style>
     html,
     body {
