--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
   <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+
   <link href="./src/assets/styles/fonts.css" rel="stylesheet">
   <link href="./src/assets/styles/style.css" rel="stylesheet">
   <style>
